--- a/01_team/src/scss/layout/_related.scss
+++ b/01_team/src/scss/layout/_related.scss
@@ -140,7 +140,7 @@ ul {
     overflow: hidden;
   }
   &__detail {
-    color: #777;
+    color: $dark-gray;
     font-size: rem(12px);
     display: flex;
     align-items: center;
