--- a/01_team/src/scss/layout/_video.scss
+++ b/01_team/src/scss/layout/_video.scss
@@ -113,13 +113,18 @@
   }
 
   &__post {
-    padding: rem(10px);
+    padding: rem(15px);
     padding-top: 0;
     margin-bottom: rem(5px);
     &-button {
       @include buttonBox;
+      font-size: rem(13px);
+      font-weight: 700;
       &:hover {
         background: none;
+      }
+      span {
+        vertical-align: middle;
       }
       margin-right: rem(10px);
     }
@@ -129,6 +134,9 @@
       justify-content: flex-end;
 
       &-item {
+        &:nth-child(3) .video__post-button {
+          margin-right: 0;
+        }
         display: flex;
         align-items: center;
 
